--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
+<style>
+    @media (max-width:768px) {
+        #main{
+                width: 70% !important;
+    margin: auto;
+    padding: 10px;
+        }
+    }
+</style>
 <body>
 
     <script src="app.js"></script>
